syntax = "proto3";

package chef.automate.domain.ingest;
option go_package = "github.com/chef/automate/api/interservice/ingest";

import "google/protobuf/timestamp.proto";
import "interservice/event/event.proto";

service EventHandlerService {
  rpc HandleEvent(chef.automate.domain.event.api.EventMsg) returns (chef.automate.domain.event.api.EventResponse);
  rpc ProjectUpdateStatus(ProjectUpdateStatusReq) returns (ProjectUpdateStatusResp);
}

message ProjectUpdateStatusReq { }

message ProjectUpdateStatusResp { 
    string state = 1;
    google.protobuf.Timestamp estimated_time_complete = 2;
    float percentage_complete = 3;
}
